# sourcebrief

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  evaluation_example.yml  feature_request.yml
apps/web/: package-lock.json  package.json  playwright.config.ts
demo/alpha/: README.md  eval_manifest.json  eval_report_template.json  golden_questions.json
demo/awesome_agent_harness_50q/: questions.json
demo/evo_temporal_50q/: README.md  eval_manifest.json  temporal_fixture.md
docker/: api.Dockerfile  web.Dockerfile
docs/: AGENT_PACKS.md  AGENT_RUNTIME_USAGE.md  ALPHA_RELEASE_NOTES.md  ARCHITECTURE.md  CLAIM_LEDGER.md  CODEBASE_MEMORY_MCP_REFERENCE_SPEC.md  CONCEPTS.md  CONTEXT_ARTIFACT_COMPILER_REPO_AGENT_SPEC.md  DEFAULT_CREDENTIAL_POLICY.md  DEMO.md  E2E_EVIDENCE.md  EVAL_MANIFESTS.md  EVOEMBEDDING_EVALUATION_PLAN.md  EVOEMBEDDING_SIDECAR.md  GITHUB_PR_REVIEW.md  GUIDE.md  INSTALL_AND_USE.md  MILESTONE-1.md  MILESTONE-11.md  MILESTONE-12.md  MILESTONE-13.md  MILESTONE-14.md  MILESTONE-15.md  MILESTONE-16.md  MILESTONE-17.md  MILESTONE-18.md  MILESTONE-2.md  MILESTONE-23.md  MILESTONE-27.md  MILESTONE-28.md  MILESTONE-29.md  MILESTONE-3.md  MILESTONE-30.md  MILESTONE-4.md  MILESTONE-5.md  MILESTONE-6.md  MILESTONE-7-10.md  OPERATIONS.md  OUT_OF_BOX_PRODUCT_PLAN.md  PROOF_ARTIFACTS.md  (+20 more)
docs/context-artifact-compiler/: A1-manifest-model-spec.md  A2-folder-upload-spec.md  A3-manifest-diff-spec.md  A4-sections-reuse-spec.md  B0-resource-map-spec.md  B1-context-pack-versions-spec.md  C-skill-export-spec.md  D-repo-agent-v0-spec.md  E0-graph-version-storage-spec.md  E1-graph-merge-v0-spec.md  F-expanded-mcp-tools-spec.md
docs/decisions/: ADR-0001-agent-packs-remote-live.md
docs/evaluations/: awesome-agent-harness-50q-20260626.md  sourcebrief-launch-50q-20260627.md  sourcebrief-launch-50q-20260630.md
docs/examples/: agent-context-output.md  demo-runtime-output.md
docs/followups/: CLI_ERGONOMICS_GOLDEN_PATH.md  DOCS_DEEP_PROOF_CLEANUP.md  MCP_TOOL_UX_SIMPLIFICATION.md  PROJECT_SKILL_PACK_LOCAL_INSTALL.md  RPC_CODE_ACCESS_LAYER.md  RUNTIME_SETUP_DOCTOR.md
docs/frontend-rebuild/: PR1-command-center-spec.md  PR2-sources-lifecycle-spec.md  PR3-workbench-spec.md  PR4-quality-spec.md  PR5-ship-admin-cleanup-spec.md  PR6-product-auth-admin-spec.md
examples/awesome-agent-harness-50q/: README.md
migrations/: env.py
scripts/: alpha_eval.py  check_quickstart_prereqs.py  collect_e2e_evidence.py  eval_manifest.py  evoembedding_sidecar.py  hermes_integration.py  launch_50q_walkthrough.py  qa_smoke.py  run_awesome_agent_harness_eval.py  run_profile_matrix_eval.py  wait_for_http.py
tests/: conftest.py
(+155 files in other folders)
