[project]
name = "sourcebrief"
version = "0.1.0"
description = "Open-source multi-tenant agent context platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "rq>=2.5",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=2.1",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "requests>=2.32",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
sourcebrief = "sourcebrief_cli.main:main"
contextsmith = "sourcebrief_cli.main:main"

[tool.setuptools.packages.find]
where = ["apps/api", "packages/shared", "packages/worker", "packages/cli"]
include = ["sourcebrief_api*", "sourcebrief_shared*", "sourcebrief_worker*", "sourcebrief_cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps/api", "packages/worker", "packages/shared", "packages/cli", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require real Postgres/Redis services",
]
pythonpath = ["apps/api", "packages/shared", "packages/worker", "packages/cli"]
